Fix deploy workflow to trigger on master

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,8 +3,7 @@ name: Deploy MkDocs to GitHub Pages
 on:
   push:
     branches:
-      - main
-      - claude/add-color-settings-01UEzJtSM6Zpuzpqb1xPZFjL
+      - master
   workflow_dispatch:
 
 permissions:
